2003-09-15	Jay Monkman <jtm@smoothsmoothie.com>

	PR 482/networking
	* rtems/rtems_glue.c: Network interfaces cant be taken down

2003-09-15	Jay Monkman <jtm@smoothsmoothie.com>

	PR 481/networking
	* net/ethernet.h, net/if_arp.h, netinet/if_ether.h: Network structs
	should be packed

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* rtems/mkrootfs.c, rtems/mkrootfs.h: URL for license changed.

2003-09-02	Jiri Gaisler <jiri@gaisler.com>

	PR 476/networking
	* machine/in_cksum.h: Fix in_cksum calculation on SPARC.

2003-08-06	Till Strauman <strauman@slac.stanford.edu>

	PR 435/networking
	* rtems/rtems_showifstat.c: rtems_showifstat misses printing 
	the netmask 

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* Makefile.am, libc/Makefile.am, lib/Makefile.am, wrapup/Makefile.am: 
	Reflect having merged configure.ac into ../configure.ac.
	* kern/kern_mib.c: Use RTEMS_VERSION to setup osrelease.

2003-05-29	Joel Sherrill <joel@OARcorp.com>

	* rtems/rtems_syscall.c: Removed warnings.

2003-05-15  cjohns@cybertec.com.au  <cjohns@cybertec.com.au>

	* netinet/in.h:
	PR406 - Added INET_ADDRSTRLEN per the SUSv3 standard.

2003-04-15	Joel Sherrill <joel@OARcorp.com>

	PR 388/networking
	* kern/kern_sysctl.c: Revert previous patch and use strlcpy() now that
	it is available. Also fixed some warnings.

2003-03-27	Joel Sherrill <joel@OARcorp.com>

	* kern/kern_sysctl.c: Converted from BSP strlcpy() to strncpy().

2003-03-25	Joel Sherrill <joel@OARcorp.com>

	* rtems/rtems_bsdnet_malloc_starvation.c: Fixed name of include file.

2002-03-25	Eric Norum <norume@aps.anl.gov>


	PR 374/networking
	* Makefile.am, rtems/rtems_bsdnet.h, rtems/rtems_glue.c:
	The patch sent as part of PR270 got applied to the wrong place.  
	The effect was that (1) startup was no faster than before and
	(2) malloc starvation messages came way too quickly.  The attached
	patch fixes both these problems and also provides a mechanism for