@@ -1,22 +1,0 @@
-##
-## $Id$
-##
-
-
-NET_O_PIECES = lib libc
-OBJS = ../$(ARCH)/*.$(OBJEXT)
-OBJS += $(foreach piece, $(NET_O_PIECES), ../$(piece)/$(ARCH)/*.$(OBJEXT))
-LIB = $(ARCH)/libnetworking.a
-
-include $(top_srcdir)/automake/multilib.am
-include $(top_srcdir)/automake/compile.am
-include $(top_srcdir)/automake/lib.am
-
-if HAS_NETWORKING
-$(LIB): $(OBJS)
-	$(make-library)
-
-all-local: $(ARCH) $(LIB)
-endif
-
-include $(top_srcdir)/automake/local.am
